--- a/static/nicepage.css
+++ b/static/nicepage.css
@@ -37856,14 +37856,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-1 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #44003b;
+            background-color: #1A5D1A;
         }
 
         .u-button-style.u-custom-color-1,
         .u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #44003b !important;
+            background-color: #1A5D1A !important;
         }
 
         .u-button-style.u-custom-color-1:hover,
@@ -37903,11 +37903,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #44003b !important;
+            background-color: #1A5D1A !important;
         }
 
         a.u-link.u-hover-custom-color-1:hover {
-            color: #44003b !important;
+            color: #1A5D1A !important;
         }
 
         
@@ -38120,14 +38120,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-5 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #70004f;
+            background-color: #C0E218;
         }
 
         .u-button-style.u-custom-color-5,
         .u-button-style.u-custom-color-5[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #70004f !important;
+            background-color: #004225!important;
         }
 
         .u-button-style.u-custom-color-5:hover,
@@ -38167,11 +38167,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-5[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #70004f !important;
+            background-color: #004225!important;
         }
 
         a.u-link.u-hover-custom-color-5:hover {
-            color: #70004f !important;
+            color: #004225!important;
         }
 
         
@@ -38186,14 +38186,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-6 tr:nth-child(even)
         {
             color: #111111;
-            background-color: #f3b33d;
+            background-color: #82CD47;
         }
 
         .u-button-style.u-custom-color-6,
         .u-button-style.u-custom-color-6[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #f3b33d !important;
+            background-color: #82CD47 !important;
         }
 
         .u-button-style.u-custom-color-6:hover,
@@ -38233,11 +38233,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-6[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #f3b33d !important;
+            background-color: #82CD47 !important;
         }
 
         a.u-link.u-hover-custom-color-6:hover {
-            color: #f3b33d !important;
+            color: #82CD47 !important;
         }
 
         
@@ -38312,14 +38312,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-1,
         .u-separator-custom-color-1:after
         {
-            border-color: #44003b;
-            stroke: #44003b;
+            border-color: #1A5D1A;
+            stroke: #1A5D1A;
         }
 
         .u-button-style.u-border-custom-color-1
         {
-            border-color: #44003b !important;
-            color: #44003b !important;
+            border-color: #1A5D1A !important;
+            color: #1A5D1A !important;
             background-color: transparent !important;
         }
 
@@ -38342,13 +38342,13 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-1,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-1
         {
-            color: #44003b !important;
-            border-color: #44003b !important;
+            color: #1A5D1A !important;
+            border-color: #1A5D1A !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]
         {
-            border-color: #44003b !important;
+            border-color: #1A5D1A !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]:hover
@@ -38504,14 +38504,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-5,
         .u-separator-custom-color-5:after
         {
-            border-color: #70004f;
-            stroke: #70004f;
+            border-color: #C0E218;
+            stroke: #C0E218;
         }
 
         .u-button-style.u-border-custom-color-5
         {
-            border-color: #70004f !important;
-            color: #70004f !important;
+            border-color: #004225!important;
+            color: #004225!important;
             background-color: transparent !important;
         }
 
@@ -38534,13 +38534,13 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-5,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-5
         {
-            color: #70004f !important;
-            border-color: #70004f !important;
+            color: #004225!important;
+            border-color: #004225!important;
         }
 
         .u-link.u-border-custom-color-5[class*="u-border-"]
         {
-            border-color: #70004f !important;
+            border-color: #004225!important;
         }
 
         .u-link.u-border-custom-color-5[class*="u-border-"]:hover
@@ -38552,14 +38552,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-6,
         .u-separator-custom-color-6:after
         {
-            border-color: #f3b33d;
-            stroke: #f3b33d;
+            border-color: #82CD47;
+            stroke: #82CD47;
         }
 
         .u-button-style.u-border-custom-color-6
         {
-            border-color: #f3b33d !important;
-            color: #f3b33d !important;
+            border-color: #82CD47 !important;
+            color: #82CD47 !important;
             background-color: transparent !important;
         }
 
@@ -38582,13 +38582,13 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-6,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-6
         {
-            color: #f3b33d !important;
-            border-color: #f3b33d !important;
+            color: #82CD47 !important;
+            border-color: #82CD47 !important;
         }
 
         .u-link.u-border-custom-color-6[class*="u-border-"]
         {
-            border-color: #f3b33d !important;
+            border-color: #82CD47 !important;
         }
 
         .u-link.u-border-custom-color-6[class*="u-border-"]:hover
@@ -38652,7 +38652,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-1,
         a.u-button-style.u-text-custom-color-1[class*="u-border-"]
         {
-            color: #44003b !important;
+            color: #1A5D1A !important;
         }
 
         a.u-button-style.u-text-custom-color-1:hover,
@@ -38690,7 +38690,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-1 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-1 .u-nav-link.active
         {
-            color: #44003b !important;
+            color: #1A5D1A !important;
         }
 
         .u-text-custom-color-1 .u-svg-link,
@@ -38699,7 +38699,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-1 .u-svg-link,
         .u-text-hover-custom-color-1:focus .u-svg-link
         {
-            fill: #44003b;
+            fill: #1A5D1A;
         }
 
         .u-link.u-text-custom-color-1:hover
@@ -38709,7 +38709,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
         a.u-link.u-text-hover-custom-color-1:hover
         {
-            color: #44003b !important;
+            color: #1A5D1A !important;
         }
         
         
@@ -38920,7 +38920,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-5,
         a.u-button-style.u-text-custom-color-5[class*="u-border-"]
         {
-            color: #70004f !important;
+            color: #004225!important;
         }
 
         a.u-button-style.u-text-custom-color-5:hover,
@@ -38958,7 +38958,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-5 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-5 .u-nav-link.active
         {
-            color: #70004f !important;
+            color: #004225!important;
         }
 
         .u-text-custom-color-5 .u-svg-link,
@@ -38967,7 +38967,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-5 .u-svg-link,
         .u-text-hover-custom-color-5:focus .u-svg-link
         {
-            fill: #70004f;
+            fill: #C0E218;
         }
 
         .u-link.u-text-custom-color-5:hover
@@ -38977,7 +38977,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
         a.u-link.u-text-hover-custom-color-5:hover
         {
-            color: #70004f !important;
+            color: #004225!important;
         }
         
         
@@ -38987,7 +38987,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-6,
         a.u-button-style.u-text-custom-color-6[class*="u-border-"]
         {
-            color: #f3b33d !important;
+            color: #82CD47 !important;
         }
 
         a.u-button-style.u-text-custom-color-6:hover,
@@ -39025,7 +39025,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-6 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-6 .u-nav-link.active
         {
-            color: #f3b33d !important;
+            color: #82CD47 !important;
         }
 
         .u-text-custom-color-6 .u-svg-link,
@@ -39034,7 +39034,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-6 .u-svg-link,
         .u-text-hover-custom-color-6:focus .u-svg-link
         {
-            fill: #f3b33d;
+            fill: #82CD47;
         }
 
         .u-link.u-text-custom-color-6:hover
@@ -39044,7 +39044,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
         a.u-link.u-text-hover-custom-color-6:hover
         {
-            color: #f3b33d !important;
+            color: #82CD47 !important;
         }
         
         
