--- a/static/Home.css
+++ b/static/Home.css
@@ -2805,7 +2805,7 @@ height: 200px;}
 }
 
 .dropbtn {
-  background-color: #3498DB;
+  background-color: #186F65;
   color: white;
   padding: 10px;
   font-size: 16px;
