--- a/static/Home.css
+++ b/static/Home.css
@@ -9,7 +9,7 @@
 
 .u-section-1 .u-text-1 {
   text-shadow: 10px 9px 7px rgba(0,0,0,0.85);
-  font-size: 6rem;
+  font-size: 6rem;ak
   font-family: "Barlow Semi Condensed";
   font-weight: 700;
   margin: 123px auto 0;
@@ -2072,7 +2072,7 @@
   height: 220px;
   object-position: 50% 91.68%;
   width: 220px;
-  background-image: url("../images/Lakmini.png");
+  background-image: url("../images/udara.jpg");
   background-position: 50% 50%;
   box-shadow: 4px 4px 40px 4px rgba(128,128,128,0.6);
   margin: 0 auto;
@@ -2110,7 +2110,7 @@
   height: 220px;
   object-position: 50% 91.68%;
   width: 220px;
-  background-image: url("../images/te.png");
+  background-image: url("../images/nuwan.jpg");
   background-position: 50% 50%;
   box-shadow: 4px 4px 40px 4px rgba(0,0,0,0.6);
   margin: 0 auto;
