changes in home

--- a/static/Home.css
+++ b/static/Home.css
@@ -9,7 +9,7 @@
 
 .u-section-1 .u-text-1 {
   text-shadow: 10px 9px 7px rgba(0,0,0,0.85);
-  font-size: 6rem;ak
+  font-size: 3rem;
   font-family: "Barlow Semi Condensed";
   font-weight: 700;
   margin: 123px auto 0;
